--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </a>
     </div>
     <div class="project">
-      <a class="btn" href="https://github.com/fatimaahsan10/Brain.tumour.detection" target="_blank">
+      <a class="btn" href="https://github.com/fatimaahsan10/BTD" target="_blank">
         Brain Tumor Detection
       </a>
     </div>
