--- a/index.html
+++ b/index.html
@@ -4,75 +4,88 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fatima Ahsan | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, sans-serif;
+      font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f4f7f9;
-      color: #333;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #fff;
     }
     header {
-      background: #2c3e50;
-      color: #fff;
       text-align: center;
-      padding: 40px 20px;
+      padding: 60px 20px;
+      background: rgba(0,0,0,0.3);
+      border-bottom: 2px solid #3498db;
     }
     header h1 {
+      font-size: 3rem;
       margin: 0;
-      font-size: 2.5rem;
+      color: #00d4ff;
+      animation: fadeIn 2s ease-in-out;
     }
     header p {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       margin-top: 10px;
+      color: #f1f1f1;
+    }
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
     }
     section {
       max-width: 900px;
       margin: 30px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      padding: 25px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
     }
     h2 {
-      color: #2c3e50;
-      border-bottom: 2px solid #3498db;
+      color: #00d4ff;
+      border-bottom: 2px solid #00d4ff;
       display: inline-block;
       margin-bottom: 15px;
     }
-    .skills, .projects, .contact {
-      margin-top: 20px;
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+      color: #e6e6e6;
     }
     .skills-list {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
+      margin-top: 10px;
     }
     .skills-list span {
-      background: #3498db;
-      color: white;
-      padding: 8px 12px;
+      background: #00d4ff;
+      color: #000;
+      padding: 8px 14px;
       border-radius: 5px;
       font-size: 14px;
+      font-weight: bold;
     }
     .project {
       margin-bottom: 15px;
     }
     .btn {
       display: inline-block;
-      background: #3498db;
-      color: white;
-      padding: 10px 15px;
+      background: #00d4ff;
+      color: #000;
+      padding: 12px 18px;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 6px;
       font-weight: bold;
-      transition: background 0.3s;
+      transition: all 0.3s ease;
     }
     .btn:hover {
-      background: #217dbb;
+      background: #00b2cc;
+      transform: scale(1.05);
     }
     .contact a {
-      color: #3498db;
+      color: #00d4ff;
       text-decoration: none;
       font-weight: bold;
     }
@@ -82,25 +95,23 @@
 
   <header>
     <h1>Fatima Ahsan</h1>
-    <p>Machine Learning | Data Science | Healthcare Innovation</p>
+    <p>Machine Learning | Artificial Intelligence | Healthcare Enthusiast</p>
   </header>
 
   <section>
     <h2>About Me</h2>
-    <p>I am passionate about leveraging Machine Learning and Data Science to develop intelligent solutions for real-world problems, especially in healthcare. My focus is on creating impactful, data-driven technologies that improve lives.</p>
+    <p>I am passionate about learning Machine Learning and Artificial Intelligence to develop intelligent solutions for real-world problems, especially in healthcare. My focus is on building impactful, data-driven technologies that improve lives.</p>
   </section>
 
   <section class="skills">
     <h2>Skills</h2>
     <div class="skills-list">
-      <span>Python</span>
-      <span>Pandas</span>
-      <span>NumPy</span>
-      <span>Scikit-learn</span>
-      <span>TensorFlow</span>
-      <span>Machine Learning</span>
-      <span>Data Visualization</span>
-      <span>Healthcare AI</span>
+      <span>Python (Basic)</span>
+      <span>Machine Learning (Learning)</span>
+      <span>Artificial Intelligence (Learning)</span>
+      <span>Data Science (Learning)</span>
+      <span>Problem Solving</span>
+      <span>Healthcare Tech Enthusiast</span>
     </div>
   </section>
 
@@ -131,5 +142,6 @@
 
 </body>
 </html>
+
 
 
