--- a/index.html
+++ b/index.html
@@ -10,48 +10,42 @@
       font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
+      background: #f9fbfd; /* Soft off-white background */
+      color: #333;
     }
     header {
       text-align: center;
-      padding: 60px 20px;
-      background: rgba(0,0,0,0.3);
+      padding: 50px 20px;
+      background: #e8f3fc; /* Light blue background */
       border-bottom: 2px solid #3498db;
     }
     header h1 {
       font-size: 3rem;
       margin: 0;
-      color: #00d4ff;
-      animation: fadeIn 2s ease-in-out;
+      color: #2c3e50;
     }
     header p {
-      font-size: 1.3rem;
-      margin-top: 10px;
-      color: #f1f1f1;
-    }
-    @keyframes fadeIn {
-      from {opacity: 0;}
-      to {opacity: 1;}
+      font-size: 1.2rem;
+      color: #555;
     }
     section {
       max-width: 900px;
       margin: 30px auto;
       padding: 25px;
-      background: rgba(255, 255, 255, 0.05);
+      background: #fff;
       border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
     }
     h2 {
-      color: #00d4ff;
-      border-bottom: 2px solid #00d4ff;
+      color: #3498db;
+      border-bottom: 2px solid #3498db;
       display: inline-block;
       margin-bottom: 15px;
     }
     p {
       font-size: 18px;
       line-height: 1.6;
-      color: #e6e6e6;
+      color: #444;
     }
     .skills-list {
       display: flex;
@@ -60,8 +54,8 @@
       margin-top: 10px;
     }
     .skills-list span {
-      background: #00d4ff;
-      color: #000;
+      background: #3498db;
+      color: #fff;
       padding: 8px 14px;
       border-radius: 5px;
       font-size: 14px;
@@ -72,8 +66,8 @@
     }
     .btn {
       display: inline-block;
-      background: #00d4ff;
-      color: #000;
+      background: #3498db;
+      color: #fff;
       padding: 12px 18px;
       text-decoration: none;
       border-radius: 6px;
@@ -81,11 +75,10 @@
       transition: all 0.3s ease;
     }
     .btn:hover {
-      background: #00b2cc;
-      transform: scale(1.05);
+      background: #217dbb;
     }
     .contact a {
-      color: #00d4ff;
+      color: #3498db;
       text-decoration: none;
       font-weight: bold;
     }
@@ -143,5 +136,6 @@
 </body>
 </html>
 
+  
 
 
