--- a/index.html
+++ b/index.html
@@ -3,139 +3,196 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fatima Ahsan | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <title>Fatima Ahsan | AI Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html { scroll-behavior: smooth; }
     body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f9fbfd; /* Soft off-white background */
+      font-family: 'Poppins', sans-serif;
       color: #333;
+      background: 
+        linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+        url('https://cdn.pixabay.com/photo/2022/02/17/15/03/ai-7019236_1280.jpg') no-repeat center center/cover;
+      background-attachment: fixed;
+      transition: background 0.3s, color 0.3s;
     }
-    header {
-      text-align: center;
-      padding: 50px 20px;
-      background: #e8f3fc; /* Light blue background */
-      border-bottom: 2px solid #3498db;
+
+    /* Dark Mode */
+    body.dark {
+      background: #121212;
+      color: #f4f4f4;
     }
-    header h1 {
-      font-size: 3rem;
-      margin: 0;
-      color: #2c3e50;
+    body.dark section {
+      background: #1f1f1f;
+      color: #f4f4f4;
     }
-    header p {
-      font-size: 1.2rem;
-      color: #555;
+    body.dark nav {
+      background: rgba(30, 30, 30, 0.9);
     }
-    section {
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 25px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+
+    /* Navigation */
+    nav {
+      position: sticky; top: 0; display: flex; justify-content: space-between; align-items: center;
+      background: rgba(255, 255, 255, 0.9); padding: 15px 20px; font-weight: bold;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1); z-index: 1000;
     }
-    h2 {
-      color: #3498db;
-      border-bottom: 2px solid #3498db;
-      display: inline-block;
-      margin-bottom: 15px;
+    nav a {
+      text-decoration: none; color: #3498db; margin: 0 10px; transition: color 0.3s;
     }
-    p {
-      font-size: 18px;
-      line-height: 1.6;
-      color: #444;
+    nav a:hover { color: #217dbb; }
+    .toggle-btn {
+      cursor: pointer; background: #3498db; color: white; border: none; padding: 8px 12px; border-radius: 5px;
     }
-    .skills-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 10px;
-    }
-    .skills-list span {
-      background: #3498db;
-      color: #fff;
-      padding: 8px 14px;
-      border-radius: 5px;
-      font-size: 14px;
-      font-weight: bold;
-    }
-    .project {
-      margin-bottom: 15px;
-    }
+
+    /* Hero Section */
+    #hero { text-align: center; padding: 120px 20px 60px; color: white; }
+    #hero h1 { font-size: 3rem; animation: fadeInDown 1.5s ease-out; }
+    #hero p { font-size: 1.4rem; margin-top: 15px; min-height: 30px; }
+    .hero-buttons { margin-top: 20px; }
     .btn {
-      display: inline-block;
-      background: #3498db;
-      color: #fff;
-      padding: 12px 18px;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: all 0.3s ease;
+      display: inline-block; background: #3498db; color: #fff; padding: 12px 18px; text-decoration: none;
+      border-radius: 6px; font-weight: bold; margin: 10px; transition: all 0.3s ease;
     }
-    .btn:hover {
-      background: #217dbb;
+    .btn:hover { background: #217dbb; transform: scale(1.05); }
+
+    .scroll-down { margin-top: 40px; font-size: 2.5rem; color: white; animation: bounce 2s infinite; display: inline-block; }
+
+    /* Sections */
+    section {
+      max-width: 900px; margin: 50px auto; padding: 25px;
+      background: rgba(255, 255, 255, 0.95); border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1); animation: fadeIn 1s ease-in-out;
     }
-    .contact a {
-      color: #3498db;
-      text-decoration: none;
-      font-weight: bold;
+    h2 { color: #2c3e50; margin-bottom: 15px; border-left: 5px solid #3498db; padding-left: 10px; }
+    p { font-size: 18px; line-height: 1.6; }
+
+    .skills-list { display: flex; flex-wrap: wrap; gap: 10px; margin-top: 15px; }
+    .skills-list span {
+      background: #3498db; color: #fff; padding: 8px 12px; border-radius: 5px;
+      font-size: 14px; font-weight: bold; transition: transform 0.3s;
+    }
+    .skills-list span:hover { transform: scale(1.1); }
+
+    .project { margin-bottom: 15px; }
+
+    .contact a { color: #3498db; font-weight: bold; }
+
+    /* Back to Top Button */
+    #backToTop {
+      position: fixed; bottom: 20px; right: 20px;
+      background: #3498db; color: #fff; border: none;
+      padding: 12px; border-radius: 50%; font-size: 20px;
+      cursor: pointer; display: none; box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+    #backToTop:hover { background: #217dbb; }
+
+    /* Animations */
+    @keyframes fadeInDown { from { opacity: 0; transform: translateY(-30px);} to { opacity: 1; transform: translateY(0);} }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px);} to { opacity: 1; transform: translateY(0);} }
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% { transform: translateY(0);}
+      40% { transform: translateY(-15px);}
+      60% { transform: translateY(-7px);}
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Fatima Ahsan</h1>
-    <p>Machine Learning | Artificial Intelligence | Healthcare Enthusiast</p>
-  </header>
+  <!-- Navigation -->
+  <nav>
+    <div>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </div>
+    <button class="toggle-btn" id="darkModeToggle">Dark Mode</button>
+  </nav>
 
-  <section>
-    <h2>About Me</h2>
-    <p>I am passionate about learning Machine Learning and Artificial Intelligence to develop intelligent solutions for real-world problems, especially in healthcare. My focus is on building impactful, data-driven technologies that improve lives.</p>
+  <!-- Hero Banner -->
+  <section id="hero">
+    <h1>Fatima Ahsan</h1>
+    <p id="tagline">Building AI & Healthcare Solutions</p>
+    <div class="hero-buttons">
+      <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
+      <a href="#projects" class="btn">View My Projects</a>
+    </div>
+    <a href="#about" class="scroll-down">&#8595;</a>
   </section>
 
-  <section class="skills">
+  <!-- About Section -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am passionate about using Artificial Intelligence and Machine Learning to create solutions that make healthcare more efficient and accessible. My goal is to bridge technology and healthcare for impactful innovations.</p>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills">
     <h2>Skills</h2>
     <div class="skills-list">
       <span>Python (Basic)</span>
       <span>Machine Learning (Learning)</span>
-      <span>Artificial Intelligence (Learning)</span>
-      <span>Data Science (Learning)</span>
+      <span>Artificial Intelligence</span>
+      <span>Data Science</span>
       <span>Problem Solving</span>
-      <span>Healthcare Tech Enthusiast</span>
+      <span>Healthcare Tech</span>
     </div>
   </section>
 
-  <section class="projects">
+  <!-- Projects Section -->
+  <section id="projects">
     <h2>Projects</h2>
-    <div class="project">
-      <a class="btn" href="https://github.com/fatimaahsan10/Low-Vision-Audio-Reader" target="_blank">
-        Low Vision Audio Reader
-      </a>
-    </div>
-    <div class="project">
-      <a class="btn" href="https://github.com/fatimaahsan10/Color-Blind-Friendly-Image-Converter" target="_blank">
-        Color Blind Friendly Image Converter
-      </a>
-    </div>
-    <div class="project">
-      <a class="btn" href="https://github.com/fatimaahsan10/BTD" target="_blank">
-        Brain Tumor Detection
-      </a>
-    </div>
+    <div class="project"><a class="btn" href="https://github.com/fatimaahsan10/Low-Vision-Audio-Reader" target="_blank">Low Vision Audio Reader</a></div>
+    <div class="project"><a class="btn" href="https://github.com/fatimaahsan10/Color-Blind-Friendly-Image-Converter" target="_blank">Color Blind Friendly Image Converter</a></div>
+    <div class="project"><a class="btn" href="https://github.com/fatimaahsan10/BTD" target="_blank">Brain Tumor Detection</a></div>
   </section>
 
-  <section class="contact">
+  <!-- Contact Section -->
+  <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:fatimaahsan1002@gmail.com">fatimaahsan1002@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/fatima-ahsan-8ab9b7281" target="_blank">View Profile</a></p>
   </section>
 
+  <!-- Back to Top Button -->
+  <button id="backToTop">&#8679;</button>
+
+  <!-- JavaScript -->
+  <script>
+    // Tagline Animation
+    const phrases = [
+      "Building AI Solutions for Healthcare",
+      "Innovating with Machine Learning",
+      "Creating Impact through Data Science"
+    ];
+    let i = 0;
+    const tagline = document.getElementById("tagline");
+    setInterval(() => {
+      tagline.textContent = phrases[i];
+      i = (i + 1) % phrases.length;
+    }, 3000);
+
+    // Back to Top Button
+    const backToTop = document.getElementById("backToTop");
+    window.addEventListener("scroll", () => {
+      if (window.scrollY > 300) {
+        backToTop.style.display = "block";
+      } else {
+        backToTop.style.display = "none";
+      }
+    });
+    backToTop.addEventListener("click", () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+
+    // Dark Mode Toggle
+    const darkToggle = document.getElementById("darkModeToggle");
+    darkToggle.addEventListener("click", () => {
+      document.body.classList.toggle("dark");
+      darkToggle.textContent = document.body.classList.contains("dark") ? "Light Mode" : "Dark Mode";
+    });
+  </script>
+
 </body>
 </html>
-
-  
-
-
