--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html { scroll-behavior: smooth; }
 
-    /* Dark Mode Default */
     body {
       font-family: 'Poppins', sans-serif;
       background: #121212;
@@ -36,7 +35,30 @@
     nav a:hover { color: #5dade2; }
 
     /* Hero Section */
-    #hero { text-align: center; padding: 120px 20px 60px; color: white; }
+    #hero { text-align: center; padding: 100px 20px 60px; color: white; }
+
+    .profile-photo {
+      width: 150px; height: 150px;
+      border-radius: 50%;
+      border: 5px solid #3498db;
+      margin-bottom: 20px;
+      object-fit: cover;
+      box-shadow: 0 0 20px #3498db, 0 0 40px #2980b9;
+      transition: transform 1.5s ease, box-shadow 0.6s ease;
+      animation: glow 3s infinite alternate;
+    }
+
+    /* Hover effect: rotate + strong glow */
+    .profile-photo:hover {
+      transform: rotate(360deg) scale(1.1);
+      box-shadow: 0 0 35px #5dade2, 0 0 70px #3498db;
+    }
+
+    @keyframes glow {
+      0% { box-shadow: 0 0 10px #3498db; }
+      100% { box-shadow: 0 0 30px #2980b9, 0 0 50px #3498db; }
+    }
+
     #hero h1 { font-size: 3rem; animation: fadeInDown 1.5s ease-out; }
     #hero p { font-size: 1.4rem; margin-top: 15px; min-height: 30px; }
     .hero-buttons { margin-top: 20px; }
@@ -47,7 +69,6 @@
       margin: 10px; transition: all 0.3s ease;
     }
     .btn:hover { background: #217dbb; transform: scale(1.05); }
-
     .scroll-down { margin-top: 40px; font-size: 2.5rem; color: white; animation: bounce 2s infinite; display: inline-block; }
 
     /* Sections */
@@ -100,6 +121,8 @@
 
   <!-- Hero Section -->
   <section id="hero">
+    <!-- Profile Photo -->
+    <img src="profile.jpg" alt="Fatima Ahsan" class="profile-photo">
     <h1>Fatima Ahsan</h1>
     <p id="tagline">Building AI & Healthcare Solutions</p>
     <div class="hero-buttons">
@@ -147,7 +170,6 @@
 
   <!-- JavaScript -->
   <script>
-    // Typing Animation
     const phrases = [
       "Building AI Solutions for Healthcare",
       "Innovating with Machine Learning",
@@ -160,7 +182,6 @@
       i = (i + 1) % phrases.length;
     }, 3000);
 
-    // Back to Top Button
     const backToTop = document.getElementById("backToTop");
     window.addEventListener("scroll", () => {
       backToTop.style.display = window.scrollY > 300 ? "block" : "none";
