--- a/index.html
+++ b/index.html
@@ -73,8 +73,24 @@
     }
     .skills-list span:hover { transform: scale(1.1); }
 
-    .project { margin-bottom: 15px; }
-    .contact a { color: #5dade2; font-weight: bold; }
+    /* Projects Section */
+    .project {
+      margin-bottom: 25px;
+      text-align: center;
+    }
+    .project h3 {
+      margin-bottom: 10px;
+      font-size: 1.4rem;
+      color: #f4f4f4;
+    }
+    .project .btn {
+      margin: 6px;
+    }
+    .huggingface-icon {
+      width: 20px;
+      vertical-align: middle;
+      margin-right: 6px;
+    }
 
     /* Back to Top Button */
     #backToTop {
@@ -139,9 +155,30 @@
   <!-- Projects -->
   <section id="projects">
     <h2>Projects</h2>
-    <div class="project"><a class="btn" href="https://github.com/fatimaahsan10/Low-Vision-Audio-Reader" target="_blank">Low Vision Audio Reader</a></div>
-    <div class="project"><a class="btn" href="https://github.com/fatimaahsan10/Color-Blind-Friendly-Image-Converter" target="_blank">Color Blind Friendly Image Converter</a></div>
-    <div class="project"><a class="btn" href="https://github.com/fatimaahsan10/BTD" target="_blank">Brain Tumor Detection</a></div>
+
+    <div class="project">
+      <h3>Low Vision Audio Reader</h3>
+      <a class="btn" href="https://github.com/fatimaahsan10/Low-Vision-Audio-Reader" target="_blank">View Code</a>
+      <a class="btn" href="https://huggingface.co/spaces/fatimaahsan/Low-VisionAudioReader" target="_blank">
+        <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" class="huggingface-icon" alt="Hugging Face"> Live Demo
+      </a>
+    </div>
+
+    <div class="project">
+      <h3>Color Blind Friendly Image Converter</h3>
+      <a class="btn" href="https://github.com/fatimaahsan10/Color-Blind-Friendly-Image-Converter" target="_blank">View Code</a>
+      <a class="btn" href="https://huggingface.co/spaces/fatimaahsan/Color-BlindFriendlyImageConverter" target="_blank">
+        <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" class="huggingface-icon" alt="Hugging Face"> Live Demo
+      </a>
+    </div>
+
+    <div class="project">
+      <h3>Brain Tumor Detection</h3>
+      <a class="btn" href="https://github.com/fatimaahsan10/BTD" target="_blank">View Code</a>
+      <a class="btn" href="https://huggingface.co/spaces/fatimaahsan/Brain_tumour_detection_app" target="_blank">
+        <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" class="huggingface-icon" alt="Hugging Face"> Live Demo
+      </a>
+    </div>
   </section>
 
   <!-- Contact -->
@@ -179,3 +216,4 @@
 
 </body>
 </html>
+
