--- a/index.html
+++ b/index.html
@@ -231,6 +231,20 @@
           </a>
         </div>
       </div>
+
+      <!-- Project 4: ReadEase -->
+      <div class="project-card">
+        <img src="ReadEase.jpg" alt="ReadEase" class="project-img">
+        <div class="overlay">AI-powered reading assistant to help dyslexic users read easily.</div>
+        <div class="project-content">
+          <h3>ReadEase</h3>
+          <a class="btn" href="https://github.com/fatimaahsan10/ReadEase/tree/main" target="_blank">View Code</a>
+          <a class="btn" href="https://huggingface.co/spaces/fatimaahsan/ReadEase" target="_blank">
+            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" class="huggingface-icon" alt="Hugging Face"> Live Demo
+          </a>
+        </div>
+      </div>
+
     </div>
   </section>
 
