--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
         </div>
       </div>
 
+      <!-- Project 5: Groq AI Chatbot -->
+      <div class="project-card">
+        <img src="Groq-AI-Chatbot.jpg" alt="Groq AI Chatbot" class="project-img">
+        <div class="overlay">An AI-powered chatbot using Groq API for fast inference.</div>
+        <div class="project-content">
+          <h3>Groq AI Chatbot</h3>
+          <a class="btn" href="https://github.com/fatimaahsan10/Groq-AI-Chatbot/tree/main" target="_blank">View Code</a>
+          <a class="btn" href="https://huggingface.co/spaces/fatimaahsan/Chatbot" target="_blank">
+            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" class="huggingface-icon" alt="Hugging Face"> Live Demo
+          </a>
+        </div>
+      </div>
+
     </div>
   </section>
 
