--- a/index.html
+++ b/index.html
@@ -226,73 +226,4 @@
         <div class="project-content">
           <h3>Brain Tumor Detection</h3>
           <a class="btn" href="https://github.com/fatimaahsan10/BTD" target="_blank">View Code</a>
-          <a class="btn" href="https://huggingface.co/spaces/fatimaahsan/Brain_tumour_detection_app" target="_blank">
-            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" class="huggingface-icon" alt="Hugging Face"> Live Demo
-          </a>
-        </div>
-      </div>
-
-      <!-- Project 4: ReadEase -->
-      <div class="project-card">
-        <img src="ReadEase.jpg" alt="ReadEase" class="project-img">
-        <div class="overlay">AI-powered reading assistant to help dyslexic users read easily.</div>
-        <div class="project-content">
-          <h3>ReadEase</h3>
-          <a class="btn" href="https://github.com/fatimaahsan10/ReadEase/tree/main" target="_blank">View Code</a>
-          <a class="btn" href="https://huggingface.co/spaces/fatimaahsan/ReadEase" target="_blank">
-            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" class="huggingface-icon" alt="Hugging Face"> Live Demo
-          </a>
-        </div>
-      </div>
-
-      <!-- Project 5: Groq AI Chatbot -->
-      <div class="project-card">
-        <img src="Groq-AI-Chatbot.jpg" alt="Groq AI Chatbot" class="project-img">
-        <div class="overlay">An AI-powered chatbot using Groq API for fast inference.</div>
-        <div class="project-content">
-          <h3>Groq AI Chatbot</h3>
-          <a class="btn" href="https://github.com/fatimaahsan10/Groq-AI-Chatbot/tree/main" target="_blank">View Code</a>
-          <a class="btn" href="https://huggingface.co/spaces/fatimaahsan/Chatbot" target="_blank">
-            <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" class="huggingface-icon" alt="Hugging Face"> Live Demo
-          </a>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:fatimaahsan1002@gmail.com">fatimaahsan1002@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/fatima-ahsan-8ab9b7281" target="_blank">View Profile</a></p>
-  </section>
-
-  <!-- Back to Top -->
-  <button id="backToTop">&#8679;</button>
-
-  <!-- JavaScript -->
-  <script>
-    const phrases = [
-      "Building AI Solutions for Healthcare",
-      "Innovating with Machine Learning",
-      "Creating Impact through Data Science"
-    ];
-    let i = 0;
-    const tagline = document.getElementById("tagline");
-    setInterval(() => {
-      tagline.textContent = phrases[i];
-      i = (i + 1) % phrases.length;
-    }, 3000);
-
-    const backToTop = document.getElementById("backToTop");
-    window.addEventListener("scroll", () => {
-      backToTop.style.display = window.scrollY > 300 ? "block" : "none";
-    });
-    backToTop.addEventListener("click", () => {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    });
-  </script>
-
-</body>
-</html>
+          <a class="btn" href="https://huggingface.co/spaces
