--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
       <!-- Project 6: Sleep Disorder Detection -->
       <div class="project-card">
-        <img src="Sleep_Disorder_Detection.jpg" alt="Sleep Disorder Detection" class="project-img">
+        <img src="Sleep_Disorder_Detection.png" alt="Sleep Disorder Detection" class="project-img">
         <div class="overlay">AI-powered web app to predict possible sleep disorders from lifestyle & health data.</div>
         <div class="project-content">
           <h3>Sleep Disorder Detection</h3>
